fix(webview): higher contrast link color in dark mode

--- a/src/web/nextui/src/app/globals.css
+++ b/src/web/nextui/src/app/globals.css
@@ -33,7 +33,7 @@
   /* Keep synced with prefers-color-scheme above */
   --background-color: #1a1a1a;
   --text-color: #f0f0f0;
-  --link-color: #2e6585;
+  --link-color: #6fcaff;
   --border-color: #444444;
   --table-border-color: #444444;
   --pass-color: #4caf50;
